@@ -23,7 +23,9 @@
 - ftpslib now works with Python 2.6, by Theodore A. Roth
 - httpslib.ProxyHTTPSConnection needs to cast port into integer,
   by John M. Schanck
-- Added support for RSASSA-PSS signing and verifying, by Koniosis
+- Added support for RSASSA-PSS signing and verifying, by Chris Collis
+- Added support for disabling padding when using RSA encryption,
+  by Chris Collis
 - Reverted a change done in 0.17 to m2urllib2 which changed urls to include
   host when it should stay as it was
 - SMIME.text_crlf and text_crlf_bio were always raising TypeError; fixed
